--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,13 @@
   display: flex;
   height: 100vh;
   background-color: var(--light-blue);
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
-
+.sidebarContent{
+  width: calc(100% - 350px);
+}
 
 .container {
   flex-grow: 1;
@@ -11,11 +16,12 @@
   background-color: var(--light-blue);
   flex-direction: column;
 
+
 }
 
 
 .page {
-  width: 75%;
+  width:  calc(100% - 350px);
   position: absolute;
   top: 80px;
   left: 350px;
@@ -23,3 +29,10 @@
   padding: 30px;
 
 }
+/* @media only screen and (max-width: 600px) {
+  .sidebarContent {
+  display: none;
+}
+.page{
+ left: 0;
+}} */
