--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    margin-top: 40px;
+    margin-top: 40px!important;
     letter-spacing: 1px;
     font-size: 16px;
     position: absolute;
