--- a/src/Components/Setting/Setting.css
+++ b/src/Components/Setting/Setting.css
@@ -1,3 +1,10 @@
+/* .setting-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: red;
+    position: relative;
+} */
 .setting {
 
     position: fixed;
@@ -26,13 +33,34 @@
 
 .setting-icon::before {
     content: "";
- 
- display: block;
+
+    display: block;
     width: 10px;
     height: 10px;
     background-color: var(--primary-color);
     transform: rotate(45deg);
 }
+
+/* .setting-box {
+    width: 300px;
+    height: 80%;
+    position: fixed;
+    z-index: 4;
+    top: 20%;
+    right:-20px;
+ 
+   
+    background-color: red;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+} */
+/* .show{
+    display: block;
+}
+.light-mode{
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+} */
 
 .setting-icon:hover .setting-icon::before {
     color: var(--primary-color);
