--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   padding: 2em;
   background-color: var(--light-blue);
   flex-direction: column;
+  height: 100vh;
 
 
 }
@@ -27,6 +28,7 @@
   left: 350px;
   background-color: var(--light-blue);
   padding: 30px;
+ 
 
 }
 /* @media only screen and (max-width: 600px) {
