--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
   body{
     background-color: #fff;
     color: var(--dark-gray);
+    background-color: var(--light-blue)!important;
   }
  .dark{
     background-color: var(--dark-gray)!important;
@@ -45,7 +46,7 @@
   ::-webkit-scrollbar-thumb{
     background-color: #EFEFFC;
   
-    border-radius: 20px;
+    border-radius: 10px;
     
   }
   .container{
